# expenses_ai_agent

./: .dockerignore  .env.example  .gitignore  .pylintrc  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  fly.bot.toml  fly.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
curriculum/: README.md  agentic_ai_sales_strategy.md
curriculum/week1/: 01-welcome.md  02-join-the-community.md  03-environment-setup.md  04-repository-pattern.md  05-sqlmodel-entities.md  06-python-enums.md  07-week1-implementation.md  08-success-criteria.md  09-looking-ahead.md  README.md
curriculum/week1/tests/: test_week1_models.py  test_week1_repos.py
curriculum/week2/: 01-welcome.md  02-week1-review.md  03-python-protocols.md  04-type-aliases.md  05-pydantic-structured-outputs.md  06-openai-function-calling.md  07-week2-implementation.md  08-success-criteria.md  09-looking-ahead.md  README.md
curriculum/week2/tests/: test_week2_llm.py  test_week2_utils.py
curriculum/week3/: 01-welcome.md  02-week2-review.md  03-prompt-engineering.md  04-service-layer-pattern.md  05-cli-with-typer.md  06-db-repositories.md  07-week3-implementation.md  08-success-criteria.md  09-looking-ahead.md  README.md
curriculum/week3/tests/: test_week3_cli.py  test_week3_db_repos.py  test_week3_prompts.py  test_week3_service.py
curriculum/week4/: 01-welcome.md  02-week3-review.md  03-input-preprocessing.md  04-conversation-handlers.md  05-human-in-the-loop.md  06-inline-keyboards.md  07-week4-implementation.md  08-success-criteria.md  09-looking-ahead.md  README.md
curriculum/week4/tests/: test_week4_handlers.py  test_week4_keyboards.py  test_week4_preprocessing.py
curriculum/week5/: 01-welcome.md  02-week4-review.md  03-fastapi-fundamentals.md  04-pydantic-schemas.md  05-streamlit-basics.md  06-api-integration.md  07-week5-implementation.md  08-success-criteria.md  09-looking-ahead.md  README.md
curriculum/week5/tests/: test_week5_api.py  test_week5_streamlit.py
curriculum/week6/: 01-welcome.md  02-week5-review.md  03-docker-fundamentals.md  04-ci-cd-pipelines.md  05-test-coverage.md  06-week6-implementation.md  07-success-criteria.md  08-capstone-project.md  09-course-completion.md  README.md
curriculum/week6/tests/: test_week6_coverage.py  test_week6_docker.py
scripts/week1/: currency_test.py  first_workflow.py
scripts/week2/: test_all_tools.py  test_format_datetime.py  test_groq_client.py  test_openai_client.py  test_openai_tools.py
scripts/week3/: test_classification.py  test_expense_repo.py
src/expenses_ai_agent/: __init__.py
src/expenses_ai_agent/api/: __init__.py  deps.py  main.py
src/expenses_ai_agent/cli/: cli.py
src/expenses_ai_agent/llms/: base.py  groq.py  openai.py  output.py
src/expenses_ai_agent/prompts/: system.py  user.py
src/expenses_ai_agent/services/: classification.py  preprocessing.py
src/expenses_ai_agent/storage/: exceptions.py  models.py  repo.py
src/expenses_ai_agent/streamlit/: __init__.py  api_client.py  app.py
tests/integration/: test_currency_integration.py  test_openai_integration.py
tests/unit/: test_api_expenses.py  test_bot.py  test_classification_service.py  test_cli.py  test_db_repos.py  test_groq_assistant.py  test_keyboards.py  test_model.py  test_models.py  test_openai_assistant.py  test_preprocessing.py  test_repo.py  test_repo_multiuser.py  test_streamlit_api_client.py  test_streamlit_app.py  test_streamlit_views.py  test_telegram_exceptions.py  test_telegram_handlers.py  test_tools_schemas.py  test_user_preference.py  test_utils.py
(+18 files in other folders)
