[project]
name = "expenses-ai-agent"
version = "0.1.0"
description = "An Expenses AI-assisted classification agent"
readme = "README.md"
authors = [
    { name = "Juan José Expósito González", email = "expositogonzalez.juanjose@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.68.0",
    "groq>=0.31.1",
    "openai>=1.109.1",
    "pydantic>=2.11.9",
    "python-decouple>=3.8",
    "rich>=14.1.0",
    "sqlmodel>=0.0.25",
    "typer>=0.20.0",
]

[project.scripts]
expenses-ai-agent = "expenses_ai_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "logfire>=4.10.0",
    "poethepoet>=0.37.0",
    "pytest-coverage>=0.0",
    "pytest-mock>=3.15.1",
    "ty>=0.0.1a21",
]

[tool.poe.tasks]
test = "pytest -vv --cov=src"
